# rust_project

./: .gitignore  README.md
blog/: 2025-04-05-Day1-1.md  2025-04-05-Day1-2.md  2025-04-05-Day1-3.md  2025-04-05-Day1-4.md  2025-04-07-Day5-1.md  2025-04-07-Day5-2.md  2025-04-07-Day5-3.md  2025-04-07-Day6-1.md  2025-04-07-Day6-2.md  2025-04-07-Day6-3.md  2025-04-08-Day7-1.md  2025-04-08-Day7-2.md  2025-04-08-Day7-3.md  2025-04-08-Day7-4.md
doc/: 2025-04-02-L100Tutorial-Day0.md  2025-04-02-L100Tutorial-Day1.md  2025-04-03-L100Tutorial-Day1-3-After.md  2025-04-03-L100Tutorial-Day2.md  2025-04-03-L100Tutorial-Day3.md  2025-04-03-L100Tutorial-Day4.md  2025-04-05-L100Tutorial-Day1-3-After.md  2025-04-07-L100Tutorial-Day5-After.md  2025-04-07-L100Tutorial-Day5.md  2025-04-07-L100Tutorial-Day6-After.md  2025-04-07-L100Tutorial-Day6.md  2025-04-08-L100Tutorial-Day7-After.md  2025-04-08-L100Tutorial-Day7.md  2025-04-16-L100Tutorial-Day7-After.md  2025-04-18-L100Tutorial-Day7-After.md  2025-04-18-L100Tutorial-Day8-After.md  2025-04-18-L100Tutorial-Day8.md  2025-05-01-L100Tutorial-Day10.md  2025-05-01-L100Tutorial-Day9-10-After.md  2025-05-01-L100Tutorial-Day9.md  2025-05-01-RustTutorial-Day0.md  2025-05-01-RustTutorial-Day11.md
stm32f103-blinky/: Cargo.toml  memory.x
stm32f103-blinky/.cargo/: config.toml
stm32f103-blinky/src/: main.rs
stm32f103-rust-ref/stm32f103/: .mxproject  stm32f103.ioc
stm32f103-rust-ref/stm32f103/Core/Inc/: main.h
stm32f103-rust-ref/stm32f103/Core/Src/: main.c  stm32f1xx_hal_msp.c
stm32f103-rust-ref/stm32f103/EWARM/: Project.eww  stm32f103.ewd  stm32f103.ewp
stm32l100-blinky/: Cargo.toml  memory.x
stm32l100-blinky/.cargo/: config.toml
stm32l100-blinky/src/: main.rs
stm32l100-rust-ref/: .mxproject  stm32l100-rust-ref.ioc
stm32l100-rust-ref/Core/Inc/: main.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h
stm32l100-rust-ref/Core/Src/: main.c
stm32l100-rust-ref/EWARM/: Project.eww  stm32l100-rust-ref.ewd  stm32l100-rust-ref.ewp  stm32l100xc_flash.icf
