[package]
name = "stm32f103-blinky"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0.0"

[dependencies.stm32f1xx-hal]
version = "0.10"
features = ["stm32f103", "rt", "medium"]

[build-dependencies]
cc = "1.2.18"

[profile.dev]
opt-level = "s"
#debug = true
lto = false
codegen-units = 1

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1