[package]
name = "stm32l100-blinky"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32l = { version = "0.14.0" }
panic-halt = "0.2.0"

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level = "s"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[build-dependencies]
cc = "1.0"